errors.txt
Error on Sun May 12 22:16:43 2024:
[2024-05-12 22:12:53] [INFO    ] discord.client: logging in using static token
[2024-05-12 22:12:54] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: 57b618b0ed9c422e8867062e413668bd).
  File "C:\Users\anura\Desktop\Projects\REALPROJECTS\DiscordBot\main.py", line 359
    await message.send("Changes and tags pushed successfully.")
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside async function


